mas cambios en el program de la api

--- a/EncuestasAPI/appsettings.json
+++ b/EncuestasAPI/appsettings.json
@@ -10,8 +10,8 @@
     "EncuestasDB": "server=65.181.111.21;database=encuesta;user=websitos_encuesta;password=encuesta2025@D"
   },
   "Jwt": {
-    "Issuer": "*",
-    "Audience": "*",
+    "Issuer": "https://encuesta-api.websitos256.com",
+    "Audience": "https://encuesta.websitos256.com",
     "Key": "ESTAESMICONTRASENAPARAENCUESTA2025"
   }
 }
